[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = "1.10.0"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
serde = { version = "1.0.200", features = ["derive"] }
aggregate_root = { path = "../shared/aggregate_root" }
domain_errors = { path = "../shared/domain_errors" }
